test/Error/validate_line_column.baseline
ReferenceError: 'z1' is not defined
	at Anonymous function (validate_line_column.js:17:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:16:1)
ReferenceError: 'z1' is not defined
	at Anonymous function (validate_line_column.js:21:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:20:1)
TypeError: Function is not a constructor
	at Anonymous function (validate_line_column.js:26:24)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:24:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:30:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:29:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:35:5)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:33:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:40:5)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:38:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:45:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:43:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:50:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:48:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:55:6)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:53:1)
ReferenceError: 'a' is not defined
	at Anonymous function (validate_line_column.js:60:5)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:58:1)
ReferenceError: 'unresolved' is not defined
	at Anonymous function (validate_line_column.js:65:11)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:63:1)
ReferenceError: 'unresolved' is not defined
	at Anonymous function (validate_line_column.js:72:11)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:70:1)
ReferenceError: 'unresolved' is not defined
	at Anonymous function (validate_line_column.js:79:11)
	at foo (validate_line_column.js:10:9)
	at Global code (validate_line_column.js:77:1)
